# fastfea

./: .gitignore  CMakeLists.txt  README.org
src/: hasher.hpp  main.cpp  transformer.hpp
test/: transformer_test.cpp
