CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(fastfea)
ADD_DEFINITIONS(-std=c++11)
SET(THIRD_DIR ${PROJECT_SOURCE_DIR}/third)
SET(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
SET(TEST_DIR ${PROJECT_SOURCE_DIR}/test)

# GTest
ADD_SUBDIRECTORY (${THIRD_DIR}/gtest-1.7.0)
ENABLE_TESTING()

FILE(GLOB_RECURSE CPP_SOURCES ${SRC_DIR}/*.cpp)
FILE(GLOB_RECURSE CPP_TEST ${TEST_DIR}/*.cpp)

# CPP source without main.cpp
SET(CPP_SOURCES_NOMAIN ${CPP_SOURCES})
LIST(REMOVE_ITEM CPP_SOURCES_NOMAIN ${SRC_DIR}/main.cpp)

INCLUDE_DIRECTORIES(
    ${SRC_DIR}
    ${THIRD_DIR}
    ${gtest_SOURCE_DIR}/include
    ${gtest_SOURCE_DIR}
)

ADD_EXECUTABLE(fastfea ${CPP_SOURCES})
ADD_EXECUTABLE(ut ${CPP_TEST} ${CPP_SOURCES_NOMAIN})
TARGET_LINK_LIBRARIES(ut gtest gtest_main)
ADD_TEST(ut ut)